<resources>
    <string name="app_name">Zarus IoT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_devices">Devices</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="add_device">Add device</string>
    <string name="already_added">Already added</string>
    <string name="title_activity_new_device">NewDeviceActivity</string>
    <string name="search_for_network_devices">Device already connected to your WiFi?</string>
    <string name="scanning_all_devices">Scanning all devices...</string>
    <string name="looking_zarus_devices">Looking for Zarus devices...</string>
    <string name="no_device_found">No Devices Found.</string>
    <string name="scan_Network">Scan Network</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_devices_stored">There is no devices addded yet.\nGo to the Devices tab to add devices.</string>
    <string name="brand_new_textview">Connecting to a brand new device? \n Turn on the device and click here.</string>
    <string name="brand_new_button">Search new device</string>
    <string name="text_config_device">Insert your Wifi Configuration</string>
    <string name="prompt_ssid_wifi">SSID (WiFi Name)</string>
    <string name="prompt_button_send_configuration">Save Configuration</string>
    <string name="turn_on_wifi">You are not connected to the WiFi\nConnect to you WiFi to find devices.</string>
    <string name="search_zarus_wifi">Search Zarus WiFi.</string>
    <string name="refresh">Refresh</string>
    <string name="prompt_login">Login</string>
    <string name="sending_configuration">Sending Configuration...</string>
    <string name="devices_found">Devices found.</string>
    <string name="devices_configured">Device configured</string>
    <string name="scan_complete">Scan Complete!</string>
    <string name="connecting_to_network">Connecting to network: </string>
    <string name="unable_to_connect">Unable to connect, try Again.</string>
    <string name="trying_to_connect">Trying to connect...</string>
    <string name="searching_device_networks">Searching Device Networks...</string>
    <string name="press_button_find_new_device">Press the button to find you new device.</string>
    <string name="status">Status:</string>
    <string name="online">Online</string>
    <string name="delete_device">Delete</string>


</resources>